--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
-name = "Pmanager"
+name = "pmanager"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
+rust-argon2 = "1.0.0"
+rand_hc = "0.3.1"
+aes-gcm = "0.9.4"
+clap = "2.33.3"
+md5 = "0.7.0"
+rpassword = "6.0.1"
+dirs = "4.0.0"
+dialoguer = "0.10.1"
