--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ dirs = "4.0.0"
 dialoguer = "0.10.1"
 config = "0.13.1"
 toml = "0.5.9"
+serde = "1.0.142"
+serde_json = "1.0.83"
+serde_derive = "1.0.142"
