--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ rand = "0.8.5"
 rust-argon2 = "1.0.0"
 rand_hc = "0.3.1"
 aes-gcm = "0.9.4"
-clap = "2.33.3"
 md5 = "0.7.0"
 rpassword = "6.0.1"
 dirs = "4.0.0"
@@ -20,3 +19,7 @@ toml = "0.5.9"
 serde = "1.0.142"
 serde_json = "1.0.83"
 serde_derive = "1.0.142"
+byteorder = "1.4.3"
+crc = "3.0.0"
+clap = { version = "3.2.17", features = ["cargo"] }
+
