--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ byteorder = "1.4.3"
 crc = "1.7"
 clap = { version = "3.2.20", features = ["derive"] }
 rpassword = "7.0.0"
+dialoguer = "0.10.2"
 
 [lib]
 name = "libkvdb"
