--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ crc = "1.7"
 clap = { version = "3.2.20", features = ["derive"] }
 rpassword = "7.0.0"
 dialoguer = "0.10.2"
+temp-dir = "0.1.11"
 
 [lib]
 name = "libkvdb"
