--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ rpassword = "7.0.0"
 dialoguer = "0.10.2"
 sha3 = "0.10.5"
 isahc = "1.7.2"
+arboard = "3.1.0"
+ctrlc = "3.2.3"
 
 [lib]
 name = "libkvdb"
